--- a/DiceUp/templates/DiceUp/home.html
+++ b/DiceUp/templates/DiceUp/home.html
@@ -28,7 +28,7 @@
 <div class="row justify-content-center">
     <div class="col-auto">
         <div class="card">
-        <div class="alert alert-dark text-center"><strong>Max file size is 200KB.</strong></div>
+        <div class="alert alert-dark text-center"><strong>Max file size is {{max_size}}MB.</strong></div>
         <form method="POST" enctype="multipart/form-data" name="DiceUpForm" onsubmit="revealMessage()">
             {% csrf_token %}
             {{form.as_p}}
