--- a/DiceUp/templates/DiceUp/base.html
+++ b/DiceUp/templates/DiceUp/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DiceUp</title>
-    {% load staticfiles %}
+    {% load static %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
